Updated Japanese translations.
(Old svn revision: 19944)

--- a/po/ja.po
+++ b/po/ja.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.28\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-02-18 22:32+0900\n"
-"PO-Revision-Date: 2006-02-04 10:28+0900\n"
+"PO-Revision-Date: 2006-02-18 22:26+0900\n"
 "Last-Translator: Daichi Kawahata <daichi@xfce.org>\n"
 "Language-Team: Japanese <xfce-users-jp@ml.fdiary.net>\n"
 "MIME-Version: 1.0\n"
@@ -66,7 +66,7 @@ msgstr "削除"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:817
 msgid "Add New Item"
-msgstr "アイテムの追加"
+msgstr "アイテムを追加"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:829 ../panel/panel.c:628
 msgid "Customize Panel"
@@ -175,11 +175,10 @@ msgid ""
 "Drag items from the list to a panel or remove them by dragging them back to "
 "the list."
 msgstr ""
-"このリストからパネルへドラッグすると追加されます。\n"
-"削除するには、パネルからドラッグし戻して下さい。"
+"このリストからパネルへドラッグするとアイテムが追加されます。\n"
+"削除するにはパネルからこのリストへドラッグして下さい。"
 
 #: ../panel/panel-dialogs.c:628
-#, fuzzy
 msgid "Available Items"
 msgstr "利用可能なアイテム"
 
@@ -537,7 +536,7 @@ msgstr "システムトレイを登録できません: %s"
 #: ../plugins/systray/systray.c:376
 #: ../plugins/systray/systray.desktop.in.in.h:2
 msgid "System Tray"
-msgstr ""
+msgstr "システムトレイ"
 
 #: ../plugins/tasklist/tasklist.c:414 ../plugins/tasklist/tasklist.c:467
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:2
@@ -649,9 +648,3 @@ msgstr "テストプラグイン"
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:2
 msgid "This plugin has no purpose"
 msgstr "このプログラムはテスト用です。"
-
-#~ msgid "New item"
-#~ msgstr "新しいアイテム"
-
-#~ msgid "Status Area"
-#~ msgstr "通知エリア"
