Updated German translations by Fabian Nowak <timystery@arcor.de>.
(Old svn revision: 19963)

--- a/po/de.po
+++ b/po/de.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.28\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-02-18 22:32+0900\n"
-"PO-Revision-Date: 2006-01-23 10:34+0100\n"
+"PO-Revision-Date: 2006-02-19 12:14+0100\n"
 "Last-Translator: Fabian Nowak <timystery@arcor.de>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -181,7 +181,6 @@ msgstr ""
 "die Liste."
 
 #: ../panel/panel-dialogs.c:628
-#, fuzzy
 msgid "Available Items"
 msgstr "Verfügbare Erweiterungen"
 
@@ -190,7 +189,6 @@ msgid "Normal Width"
 msgstr "Normale Breite"
 
 #: ../panel/panel-dialogs.c:838 ../panel/panel-dialogs.c:1061
-#, fuzzy
 msgid "Full Width"
 msgstr "Volle Breite"
 
@@ -522,11 +520,11 @@ msgstr "_Ausdehnen"
 
 #: ../plugins/showdesktop/showdesktop.c:63
 msgid "Restore hidden windows"
-msgstr ""
+msgstr "Versteckte Fenster wiederherstellen"
 
 #: ../plugins/showdesktop/showdesktop.c:64
 msgid "Hide windows and show desktop"
-msgstr ""
+msgstr "Fenster verstecken und Arbeitsfläche anzeigen"
 
 #: ../plugins/systray/systray.c:65
 msgid "There is already a system tray running on this screen"
@@ -535,12 +533,12 @@ msgstr "Es läuft bereits ein Systemtray"
 #: ../plugins/systray/systray.c:71
 #, c-format
 msgid "Unable to register system tray: %s"
-msgstr "Konnte Systemtray nicht registrieren: %s"
+msgstr "Konnte Systemleiste nicht registrieren: %s"
 
 #: ../plugins/systray/systray.c:376
 #: ../plugins/systray/systray.desktop.in.in.h:2
 msgid "System Tray"
-msgstr ""
+msgstr "Systemleiste"
 
 #: ../plugins/tasklist/tasklist.c:414 ../plugins/tasklist/tasklist.c:467
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:2
@@ -579,19 +577,19 @@ msgstr "Tasks immer gruppieren"
 #: ../plugins/windowlist/windowlist.c:480
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:2
 msgid "Window List"
-msgstr ""
+msgstr "Fensterliste"
 
 #: ../plugins/windowlist/windowlist.c:348
 msgid "Add workspace"
-msgstr ""
+msgstr "Arbeitsfläche hinzufügen"
 
 #: ../plugins/windowlist/windowlist.c:358
 msgid "Delete workspace"
-msgstr ""
+msgstr "Arbeitsfläche löschen"
 
 #: ../plugins/windowlist/windowlist.c:493
 msgid "Include all Workspaces"
-msgstr ""
+msgstr "Alle Arbeitsflächen miteinbeziehen"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
@@ -628,11 +626,11 @@ msgstr ""
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:1
 msgid "Show Desktop"
-msgstr ""
+msgstr "Arbeitsfläche anzeigen"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:2
 msgid "Toggle desktop show/hide"
-msgstr ""
+msgstr "Arbeitsfläche anzeigen/verstecken"
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
 msgid "Show notification icons"
@@ -644,7 +642,7 @@ msgstr "Alle laufenden Anwendungen anzeigen"
 
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:1
 msgid "Show list of available windows"
-msgstr ""
+msgstr "Zeige eine Liste der verfügbaren Fenster"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:1
 msgid "Test Plugin"
@@ -653,9 +651,3 @@ msgstr "Plugin testen"
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:2
 msgid "This plugin has no purpose"
 msgstr "Dieses Plugin hat keinen Nutzen"
-
-#~ msgid "New item"
-#~ msgstr "Neuer Eintrag"
-
-#~ msgid "Status Area"
-#~ msgstr "Statusfeld"
