--- a/po/sk.po
+++ b/po/sk.po
@@ -2,42 +2,42 @@
 # Copyright (C) 2002-2006 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Juraj Brosz <juro@jurajbrosz.info>, 2004.
-#
+# Roman Moravcik <roman.moravcik@gmail.com>, 2006.
+# 
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.28\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-02-18 22:32+0900\n"
-"PO-Revision-Date: 2005-09-29 20:41+0900\n"
-"Last-Translator: Juraj Brosz <juro@jurajbrosz.info>\n"
+"PO-Revision-Date: 2006-02-19 14:24+0100\n"
+"Last-Translator: Roman Moravcik <roman.moravcik@gmail.com>\n"
 "Language-Team: Slovak <sk-i18n@lists.linux.sk>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.3.1\n"
 
 #. dialogs are annoying, just spit out a warning
 #: ../libxfce4panel/xfce-panel-external-item.c:177
 #, c-format
 msgid "An item was unexpectedly removed: \"%s\"."
-msgstr ""
+msgstr "Položka bola neočakávane odstránená: \"%s\"."
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:572
-#, fuzzy, c-format
+#, c-format
 msgid "Remove \"%s\"?"
-msgstr "Odstrániť"
+msgstr "Odstrániť \"%s\"?"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:575 ../panel/panel-app.c:702
 #: ../panel/panel-app.c:734 ../panel/panel-app.c:767
 #: ../panel/panel-dialogs.c:577 ../panel/panel-dialogs.c:1572
 #: ../plugins/launcher/launcher.c:320 ../plugins/launcher/launcher.c:369
 msgid "Xfce Panel"
-msgstr "Panel Xfce"
+msgstr "Xfce panel"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:577
 msgid ""
 "The item will be removed from the panel and its configuration will be lost."
-msgstr ""
+msgstr "Položka bude odstránená z panelu a jej nastavenie bude stratené."
 
 #. configure, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:748
@@ -47,80 +47,74 @@ msgstr ""
 #: ../plugins/systray/systray.c:360 ../plugins/tasklist/tasklist.c:398
 #: ../plugins/windowlist/windowlist.c:465
 msgid "Properties"
-msgstr ""
+msgstr "Predvoľby"
 
 #. about item, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:765
 msgid "About"
-msgstr ""
+msgstr "O"
 
 #. move
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:778
-#, fuzzy
 msgid "Move"
-msgstr "Odstrániť"
+msgstr "Presunúť"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:800
-#, fuzzy
 msgid "Remove"
 msgstr "Odstrániť"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:817
-#, fuzzy
 msgid "Add New Item"
 msgstr "Pridať novú položku"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:829 ../panel/panel.c:628
 msgid "Customize Panel"
-msgstr ""
+msgstr "Prispôsobiť panel"
 
 #: ../panel/panel.c:639 ../panel/panel-dialogs.c:600
 msgid "Add Items"
-msgstr ""
+msgstr "Pridať položky"
 
 #: ../panel/panel.c:654 ../plugins/actions/actions.c:350
 msgid "Quit"
-msgstr ""
+msgstr "Koniec"
 
 #: ../panel/panel.c:664
-#, fuzzy
 msgid "Restart"
-msgstr "_Reštartovať"
+msgstr "Reštartovať"
 
 #: ../panel/panel.c:678
-#, fuzzy
 msgid "About the Xfce Panel"
-msgstr "Panel Xfce"
+msgstr "O Xfce panely"
 
 #: ../panel/panel-item-manager.c:357 ../panel/panel-item-manager.c:365
-#, fuzzy, c-format
+#, c-format
 msgid "Could not open \"%s\" module"
-msgstr "Nemôžem vytvoriť položku panelu \"%s\"."
+msgstr "Nemôžem otvoriť modul \"%s\""
 
 #: ../panel/panel-app.c:215 ../panel/panel-app.c:704
-#, fuzzy
 msgid "Exit Xfce Panel?"
-msgstr "Panel Xfce"
+msgstr "Ukončiť Xfce panel?"
 
 #: ../panel/panel-app.c:705
 msgid "You can't remove the last panel. Would you like to exit the program?"
-msgstr ""
+msgstr "Nemôžete odstrániť posledný panel. Chcete ukončiť  program?"
 
 #: ../panel/panel-app.c:732
 #, c-format
 msgid "Remove Panel \"%d\"?"
-msgstr ""
+msgstr "Odstrániť panel \"%d\"?"
 
 #: ../panel/panel-app.c:736
 msgid "The selected panel and all its items will be removed."
-msgstr ""
+msgstr "Zvolený panel a jeho položky budú odstránené."
 
 #: ../panel/panel-app.c:775
 msgid "Developer"
-msgstr ""
+msgstr "Vývojár"
 
 #: ../panel/main.c:46
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "\n"
 " Xfce Panel %s\n"
@@ -132,7 +126,7 @@ msgid ""
 "\n"
 msgstr ""
 "\n"
-" Panel Xfce\n"
+" Xfce panel\n"
 " Verzia %s\n"
 "\n"
 " Súčasť grafického prostredia Xfce\n"
@@ -147,6 +141,8 @@ msgid ""
 " Usage: %s [OPTIONS]\n"
 "\n"
 msgstr ""
+" Použitie: %s [Predvoľby]\n"
+"\n"
 
 #. Only translate the descriptions, not the options itself
 #: ../panel/main.c:55
@@ -162,60 +158,69 @@ msgid ""
 " -a, --add       Add new items\n"
 "\n"
 msgstr ""
+" Predvoľby\n"
+" -h, --help      Zobraziť túto nápovedu\n"
+" -v, --version   Zobraziť verziu panelu\n"
+" -c, --customize Zobraziť nastavenie panelu\n"
+" -s, --save      Uložiť nastavenie\n"
+" -r, --restart   Reštartovať panely\n"
+" -q, --quit      Ukončiť sedenie\n"
+" -x, --exit      Zavrieť všetky panely a ukončiť program\n"
+" -a, --add       Pridať novú položku\n"
+"\n"
 
 #: ../panel/panel-dialogs.c:615
 msgid ""
 "Drag items from the list to a panel or remove them by dragging them back to "
 "the list."
 msgstr ""
+"Pretiahnite položky zo zoznamu do panelu alebo odstráňte ich pretiahnutím "
+"naspäť do zoznamu."
 
 #: ../panel/panel-dialogs.c:628
 msgid "Available Items"
-msgstr ""
+msgstr "Dostupné položky"
 
 #: ../panel/panel-dialogs.c:836 ../panel/panel-dialogs.c:1059
 msgid "Normal Width"
-msgstr ""
+msgstr "Normálna šírka"
 
 #: ../panel/panel-dialogs.c:838 ../panel/panel-dialogs.c:1061
 msgid "Full Width"
-msgstr ""
+msgstr "Plná šírka"
 
 #: ../panel/panel-dialogs.c:844 ../panel/panel-dialogs.c:1067
-#, fuzzy
 msgid "Span Monitors"
-msgstr "Editor"
+msgstr ""
 
 #: ../panel/panel-dialogs.c:904 ../panel/panel-dialogs.c:1132
 msgid "Left"
-msgstr ""
+msgstr "Vľavo"
 
 #: ../panel/panel-dialogs.c:906 ../panel/panel-dialogs.c:1134
 msgid "Right"
-msgstr ""
+msgstr "Vpravo"
 
 #: ../panel/panel-dialogs.c:911 ../panel/panel-dialogs.c:1139
 msgid "Top"
-msgstr ""
+msgstr "Hore"
 
 #: ../panel/panel-dialogs.c:913 ../panel/panel-dialogs.c:1141
 msgid "Bottom"
-msgstr ""
+msgstr "Dole"
 
 #. floating?
 #: ../panel/panel-dialogs.c:941
-#, fuzzy
 msgid "Panel Type"
-msgstr "Veľkosť panelu:"
+msgstr "Typ panelu"
 
 #: ../panel/panel-dialogs.c:950
-#, fuzzy
 msgid "Fixed Position"
-msgstr "Pozícia"
+msgstr "Pevná pozícia"
 
 #: ../panel/panel-dialogs.c:956
 msgid "Freely Moveable"
-msgstr ""
+msgstr "Voľná pozícia"
 
 #. position
 #: ../panel/panel-dialogs.c:967
@@ -223,12 +228,10 @@ msgid "Position"
 msgstr "Pozícia"
 
 #: ../panel/panel-dialogs.c:1075
-#, fuzzy
 msgid "Auto_hide"
-msgstr "Automatické skrývanie"
+msgstr "_Automatické skrývanie"
 
 #: ../panel/panel-dialogs.c:1093
-#, fuzzy
 msgid "Orientation:"
 msgstr "Orientácia panelu:"
 
@@ -241,19 +244,16 @@ msgid "Vertical"
 msgstr "Vertikálna"
 
 #: ../panel/panel-dialogs.c:1116
-#, fuzzy
 msgid "Handle:"
-msgstr "Pozícia"
+msgstr ""
 
 #: ../panel/panel-dialogs.c:1128
-#, fuzzy
 msgid "At both sides"
-msgstr "Automatické skrývanie"
+msgstr "Na obidvoch stranách"
 
 #: ../panel/panel-dialogs.c:1201
-#, fuzzy
 msgid "Select Monitor"
-msgstr "Editor"
+msgstr ""
 
 #. size
 #: ../panel/panel-dialogs.c:1314 ../plugins/tasklist/tasklist.c:431
@@ -270,56 +270,49 @@ msgstr "Veľká"
 
 #: ../panel/panel-dialogs.c:1350
 msgid "Transparency"
-msgstr ""
+msgstr "Priesvitnosť"
 
 #: ../panel/panel-dialogs.c:1358
 msgid "None"
-msgstr ""
+msgstr "Žiaden"
 
 #: ../panel/panel-dialogs.c:1372
 msgid "Full"
-msgstr ""
+msgstr "Plný"
 
 #: ../panel/panel-dialogs.c:1416 ../panel/panel-dialogs.c:1454
 #: ../panel/panel-dialogs.c:1479
-#, fuzzy, c-format
+#, c-format
 msgid "Panel %d"
-msgstr "Panel Xfce"
+msgstr "Panel %d"
 
 #: ../panel/panel-dialogs.c:1500
-#, fuzzy
 msgid "Remove Panel"
-msgstr "Odstrániť"
+msgstr "Odstrániť panel"
 
 #: ../panel/panel-dialogs.c:1513
-#, fuzzy
 msgid "New Panel"
-msgstr "Panel Xfce"
+msgstr "Nový panel"
 
 #: ../panel/panel-dialogs.c:1597
-#, fuzzy
 msgid "Panel Manager"
-msgstr "Veľkosť panelu:"
+msgstr "Nastavenie panelu"
 
 #: ../plugins/actions/actions.c:325
-#, fuzzy
 msgid "Panel Actions"
-msgstr "Nastavenia panelu Xfce"
+msgstr "Akcie panelu"
 
 #: ../plugins/actions/actions.c:342
-#, fuzzy
 msgid "Select action type:"
-msgstr "Vybrať príkaz"
+msgstr "Vyberte typ akcie"
 
 #: ../plugins/actions/actions.c:351
-#, fuzzy
 msgid "Lock screen"
-msgstr "_Uzamknúť obrazovku"
+msgstr "Uzamknúť obrazovku"
 
 #: ../plugins/actions/actions.c:352
-#, fuzzy
 msgid "Quit + Lock screen"
-msgstr "_Uzamknúť obrazovku"
+msgstr "Koniec + Uzamknúť obrazovku"
 
 #. Use format characters from strftime(3)
 #. * to get the proper string for your locale.
@@ -330,14 +323,12 @@ msgstr "_Uzamknúť obrazovku"
 #. * %Y  : four digit year
 #.
 #: ../plugins/clock/clock.c:109
-#, fuzzy
 msgid "%A %d %B %Y"
-msgstr "%A, %-d. %B %Y"
+msgstr "%A, %d. %B %Y"
 
 #: ../plugins/clock/clock.c:424 ../plugins/clock/clock.desktop.in.in.h:1
-#, fuzzy
 msgid "Clock"
-msgstr "Uzamknúť"
+msgstr "Hodiny"
 
 #: ../plugins/clock/clock.c:431
 msgid "Appearance"
@@ -358,24 +349,23 @@ msgstr "LED"
 
 #: ../plugins/clock/clock.c:453 ../plugins/systray/systray.c:389
 msgid "Show _frame"
-msgstr ""
+msgstr "Zobraziť _rám"
 
 #: ../plugins/clock/clock.c:461
 msgid "Clock Options"
-msgstr ""
+msgstr "Predvoľby hodín"
 
 #: ../plugins/clock/clock.c:471
 msgid "Use 24-_hour clock"
-msgstr ""
+msgstr "Použiť 24-hodinový čas"
 
 #: ../plugins/clock/clock.c:479
-#, fuzzy
 msgid "Show AM/PM"
-msgstr "Dopoludnia/Popoludní"
+msgstr "Zobraziť Dopoludnia/Popoludní"
 
 #: ../plugins/clock/clock.c:487
 msgid "Display seconds"
-msgstr ""
+msgstr "Zobraziť sekundy"
 
 #: ../plugins/iconbox/iconbox.c:808
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:1
@@ -383,25 +373,22 @@ msgid "Icon Box"
 msgstr ""
 
 #: ../plugins/iconbox/iconbox.c:822
-#, fuzzy
 msgid "Only show minimized applications"
-msgstr "Zobraziť _názvy aplikácií"
+msgstr "Zobraziť len minimalizované aplikácie"
 
 #: ../plugins/launcher/launcher.c:318 ../plugins/launcher/launcher.c:367
-#, fuzzy, c-format
+#, c-format
 msgid "Could not run \"%s\""
-msgstr "Nemôžem vytvoriť položku panelu \"%s\"."
+msgstr "Nemôžem spusiť \"%s\"."
 
 #: ../plugins/launcher/launcher.c:578 ../plugins/launcher/launcher.c:1157
 #: ../plugins/launcher/launcher-dialog.c:1121
-#, fuzzy
 msgid "New Item"
-msgstr "Pridať novú položku"
+msgstr "Nová položka"
 
 #: ../plugins/launcher/launcher.c:631 ../plugins/launcher/launcher.c:1158
-#, fuzzy
 msgid "This item has not yet been configured"
-msgstr "Táto položka nemá žiadne nastaviteľné vlastnosti"
+msgstr "Táto položka nebola ešte nastavená"
 
 #: ../plugins/launcher/launcher-dialog.c:78
 msgid "Default"
@@ -456,39 +443,34 @@ msgid "Terminal"
 msgstr "Terminál"
 
 #: ../plugins/launcher/launcher-dialog.c:381
-#, fuzzy
 msgid "Select image file"
-msgstr "Vybrať súbor"
+msgstr "Vybrať ikonu"
 
 #: ../plugins/launcher/launcher-dialog.c:426
 msgid "Select command"
 msgstr "Vybrať príkaz"
 
 #: ../plugins/launcher/launcher-dialog.c:449
-#, fuzzy
 msgid "Name"
-msgstr "Hry"
+msgstr "Názov"
 
 #: ../plugins/launcher/launcher-dialog.c:467
-#, fuzzy
 msgid "Description"
-msgstr "Pozícia"
+msgstr "Popis"
 
 #: ../plugins/launcher/launcher-dialog.c:522
 msgid "Other..."
-msgstr ""
+msgstr "Ďalší..."
 
 #: ../plugins/launcher/launcher-dialog.c:608
-#, fuzzy
 msgid "Command"
-msgstr "Príkaz:"
+msgstr "Príkaz"
 
 #: ../plugins/launcher/launcher-dialog.c:644
 msgid "Run in _terminal"
 msgstr "Spustiť v _termináli"
 
 #: ../plugins/launcher/launcher-dialog.c:662
-#, fuzzy
 msgid "Use _startup notification"
 msgstr "Použiť štartovaciu _notifikáciu"
 
@@ -497,11 +479,11 @@ msgid ""
 "The first item in the list is shown on the panel. Additional items will "
 "appear in a menu."
 msgstr ""
+"Prvá položka zo zoznamu je zobrazená v panely. Ostatné položky budú v menu."
 
 #: ../plugins/launcher/launcher-dialog.c:1298
-#, fuzzy
 msgid "Program Launcher"
-msgstr "Pridať menu k spúšťaču"
+msgstr "Programový spúšťač"
 
 #: ../plugins/launcher/launcher-dialog.c:1633
 msgid "Select file"
@@ -525,21 +507,20 @@ msgid "Separator"
 msgstr "Oddeľovač"
 
 #: ../plugins/separator/separator.c:284
-#, fuzzy
 msgid "_Draw Separator"
-msgstr "Oddeľovač"
+msgstr "Zobraziť o_ddeľovač"
 
 #: ../plugins/separator/separator.c:293
 msgid "_Expand"
-msgstr ""
+msgstr "_Roztiahnuť"
 
 #: ../plugins/showdesktop/showdesktop.c:63
 msgid "Restore hidden windows"
-msgstr ""
+msgstr "Obnoviť skryté okná"
 
 #: ../plugins/showdesktop/showdesktop.c:64
 msgid "Hide windows and show desktop"
-msgstr ""
+msgstr "Minimalizovať všetky okná a zobraziť pracovnú plochu"
 
 #: ../plugins/systray/systray.c:65
 msgid "There is already a system tray running on this screen"
@@ -557,17 +538,16 @@ msgstr ""
 
 #: ../plugins/tasklist/tasklist.c:414 ../plugins/tasklist/tasklist.c:467
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:2
-#, fuzzy
 msgid "Task List"
-msgstr "Úlohy"
+msgstr "Zoznam úloh"
 
 #: ../plugins/tasklist/tasklist.c:439
 msgid "Minimum Width:"
-msgstr ""
+msgstr "Minimálna šírka:"
 
 #: ../plugins/tasklist/tasklist.c:454
 msgid "Use all available space"
-msgstr ""
+msgstr "Použi všetok dostupný priestor"
 
 #: ../plugins/tasklist/tasklist.c:471
 msgid "Show tasks from _all workspaces"
@@ -578,55 +558,50 @@ msgid "Show application _names"
 msgstr "Zobraziť _názvy aplikácií"
 
 #: ../plugins/tasklist/tasklist.c:495
-#, fuzzy
 msgid "Never group tasks"
-msgstr "Vždy spájať podobné úlohy do_hromady"
+msgstr "Nikdy nespájať podobné úlohy dohromady"
 
 #: ../plugins/tasklist/tasklist.c:498
-#, fuzzy
 msgid "Automatically group tasks"
-msgstr "Vždy spájať podobné úlohy do_hromady"
+msgstr "Automaticky spájať podobné úlohy dohromady"
 
 #: ../plugins/tasklist/tasklist.c:501
-#, fuzzy
 msgid "Always group tasks"
-msgstr "Vždy spájať podobné úlohy do_hromady"
+msgstr "Vždy spájať podobné úlohy dohromady"
 
 #: ../plugins/windowlist/windowlist.c:249
 #: ../plugins/windowlist/windowlist.c:480
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:2
 msgid "Window List"
-msgstr ""
+msgstr "Zoznam okien"
 
 #: ../plugins/windowlist/windowlist.c:348
 msgid "Add workspace"
-msgstr ""
+msgstr "Pridať pracovnú plochu"
 
 #: ../plugins/windowlist/windowlist.c:358
 msgid "Delete workspace"
-msgstr ""
+msgstr "Zmazať pracovnú plochu"
 
 #: ../plugins/windowlist/windowlist.c:493
 msgid "Include all Workspaces"
-msgstr ""
+msgstr "Zahrnúť všetky pracovné plochy"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
-msgstr ""
+msgstr "Tlačidlá akcií"
 
 #: ../plugins/actions/actions.desktop.in.in.h:2
-#, fuzzy
 msgid "Log out or lock the screen"
-msgstr "Uzamknúť obrazovku"
+msgstr "Odhlásiť alebo uzamknúť obrazovku"
 
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
-msgstr ""
+msgstr "Koľko je hodín?"
 
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:2
-#, fuzzy
 msgid "Show icons of all running applications"
-msgstr "Zobraziť _názvy aplikácií"
+msgstr "Zobrazí ikony všetkých bežiacich aplikácií"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:1
 msgid "Launcher"
@@ -634,47 +609,40 @@ msgstr "Spúšťač"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:2
 msgid "Program launcher with optional menu"
-msgstr ""
+msgstr "Programový spúšťač s nastaviteľnou ponukou"
 
 #: ../plugins/pager/pager.desktop.in.in.h:1
 msgid "Miniature view of all virtual desktops"
-msgstr ""
+msgstr "Malý náhľad všetkých virtuálnych pracovných plôch"
 
 #: ../plugins/separator/separator.desktop.in.in.h:1
 msgid "Adds a space or a line between panel items"
-msgstr ""
+msgstr "Pridá medzeru alebo riadok medzi položkami panelu"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:1
 msgid "Show Desktop"
-msgstr ""
+msgstr "Zobraziť pracovnú plochu"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:2
 msgid "Toggle desktop show/hide"
-msgstr ""
+msgstr "Minimalizuje všetky okná a zobrazí pracovnú plochu"
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
-#, fuzzy
 msgid "Show notification icons"
-msgstr "Zobraziť _názvy aplikácií"
+msgstr "Zobrazí notifikačné ikony"
 
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
-#, fuzzy
 msgid "Show all running applications"
-msgstr "Zobraziť _názvy aplikácií"
+msgstr "Zobrazí všetky bežiace aplikácie"
 
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:1
 msgid "Show list of available windows"
-msgstr ""
+msgstr "Zobrazí zoznam dostupných okien"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:1
-#, fuzzy
 msgid "Test Plugin"
-msgstr "Spúšťač"
+msgstr "Ukážkový plugin"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:2
 msgid "This plugin has no purpose"
-msgstr ""
-
-#, fuzzy
-#~ msgid "New item"
-#~ msgstr "Pridať novú položku"
+msgstr "Tento plugin nemá žiaden cieľ"
